todo and env example

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-- FIX LINKS ON GITHUB PAGES
+- normal links work, default login, register do not
 
 - When adding a movie from one category to another, it doesnt appear untill a refresh
 - make separate profile page with options to change username email pass and import data
